--- a/dash.css
+++ b/dash.css
@@ -17,7 +17,8 @@
     justify-content: center;
     box-shadow: #fff;
     position: sticky;
-    
+    box-shadow: 6px 6px 10px -1px rgba(0,0,0,0.15),
+              -6px -6px 10px -1px rgba(0,0,0,0.15);
     top: 0%;
     
 }
@@ -33,6 +34,7 @@ nav ul{
 
 }
 nav ul li{
+    
     display: inline-block;
     margin-right: 20px;
     padding: 0 10px;
@@ -64,6 +66,39 @@ nav ul li{
     bottom: -4px;
     left: 3px;
 }
+.right
+{
+    min-width: 10%;
+    
+    display: flex;
+    flex-wrap: wrap;
+    
+    align-items: center;
+    height: 10vh;
+    
+}
+.pre{
+    padding: 60px;
+    margin-top: -5%;    
+
+    
+}
+.pre p
+{
+    border: 1px solid rgb(230, 238, 240);
+    background-color: rgb(230, 238, 240);
+    padding: 5px 10px;
+    color:orange;
+    font-size: 20px;
+    cursor: pointer;
+}
+.pro{
+    width: 50px;
+    padding-left: 20px;
+    cursor: pointer;
+    
+}
+
 
 /* |||||||||||||||||||||||||||||||||||||||||||| */
 
@@ -71,7 +106,7 @@ nav ul li{
 {
     display: flex;
     flex-wrap: wrap;
-   margin: 1%;
+     margin:0%  1%;
     justify-content: center;
     padding-left: 40px;
     background-color: rgb(230, 238, 240);
@@ -239,6 +274,8 @@ circle{
     border-radius: 20px;
     margin-left:1% ;
     
+    
+    
    
 
 }
@@ -248,12 +285,22 @@ circle{
     border: 1px solid white;
 }
 
-.head button
+.buut
 {   display: inline-block;
     border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
-    background-color:  rgb(230, 238, 240);
+    background-color:  white;
+    border: 1px solid  rgb(230, 238, 240);
+    cursor: pointer;
+}
+.buut--selected
+{
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    background-color:  rgb(143, 144, 144);
     border: 1px solid  rgb(230, 238, 240);
 }
 .a
@@ -304,7 +351,7 @@ circle{
     margin-left: 5%;
     border-radius: 20px;
     height: 18vh;
-    background-image: url(./profile.jpg);
+    background-image: url(./Images/profile.jpg);
     background-size: cover;
 }
 .info
@@ -330,9 +377,7 @@ circle{
     padding-top: 2%;
     padding-bottom: 2%;
 }
-.sec2{
-    
-}
+
 .loca{
 height: 50px;
 position: relative;
@@ -386,9 +431,8 @@ left: 5%;
     margin-right: 5%;
     
 }
-.text p{
-    
-}
+ 
+
 hr
 {
     color: rgb(230, 238, 240) ;
@@ -449,4 +493,17 @@ justify-content: space-around;
 .sec3 h1{
     padding-left: 20px;
 
+}
+.contain 
+{   text-align: center;
+    justify-content: center;
+    display: none;
+}
+.contain img{
+    margin: 20%;
+}
+.contain--selected
+{   
+   height: 170vh;
+    display: block;
 }
